# waybionic_ground_station

./: .gitignore  BuildInstructions.md  CONTRIBUTING.md  README.md  fresh-clone_build_test.txt
.github/: CODEOWNERS
.github/workflows/: ros2_build_test.yml
FULL-ARM_redownload-march8-20260530T204116Z-3-001/FULL-ARM_redownload-march8/: full-arm-mar24.mp4:Zone.Identifier
FULL-ARM_redownload-march8-20260530T204116Z-3-001/FULL-ARM_redownload-march8/1-bottom-to-elbow/: 2WireSlipRing-2-wire-slipring.SLDASM  6656K153_Ultra-Thin Ball Bearing.SLDPRT  90_degree_elbow_V4_NB.SLDPRT  ArmCart.SLDASM  BASE_convertor (1) (1).SLDPRT  BASE_convertor.SLDPRT  Base+dome.SLDASM  Base_Funnel (1).SLDPRT  Base_Updated.SLDPRT  New_Dome.SLDPRT  (+14 more)
annin_ar4_driver/: CMakeLists.txt  package.xml
annin_ar4_driver/scripts/: waybionic_parts_display.py
annin_ar4_moveit_config/launch/: demo.launch.py  moveit.launch.py
annin_ar4_moveit_config/rviz/: moveit.rviz
docker/: Dockerfile  entrypoint.sh
docs/: doctor-camera-requirements.md  doctor_camera_system_design.md  mechanical_team_urdf_positioning_request.md  model_import_runbook.md  urdf_export_from_solidworks.md  waybionic_model_import_checklist.md
ground_station_monitoring_ui/: README.md
ground_station_monitoring_ui/src/: main_window.py  mock_diagnostics.py  styles.py
ground_station_monitoring_ui_archived/: README.md  app.py
ground_station_monitoring_ui_archived/docs/: DIAGNOSTICS_CONTRACT.md
ground_station_monitoring_ui_archived/src/: __init__.py  diagnostics_contract.py
guides/: 2026-05-30_1500_gui-customisation-guide.md  2026-05-30_1500_waybionic-parts-display-changes.md
research-docs/: doctor-camera-requirements.md
scripts/: check_waybionic_ws.sh
waybionic_bringup/: CMakeLists.txt  package.xml
waybionic_bringup/launch/: assembled.launch.py  display.launch.py  ground_station.launch.py  test_all.launch.py
waybionic_bringup/rviz/: waybionic.rviz
waybionic_description/: CMakeLists.txt  package.xml
waybionic_description/meshes/: 2WireSlipRing-2-wire-slipring-stl_-_2WireSlipRing-2-wire-slipring.step-1_rotor.step-1_negative-rotor-wire.step-1.stl  2WireSlipRing-2-wire-slipring-stl_-_2WireSlipRing-2-wire-slipring.step-1_rotor.step-1_positive-rotor-wire.step-1.stl  2WireSlipRing-2-wire-slipring-stl_-_2WireSlipRing-2-wire-slipring.step-1_rotor.step-1_rotator-base.step-1.stl  2WireSlipRing-2-wire-slipring-stl_-_2WireSlipRing-2-wire-slipring.step-1_stator.step-1_negative-stator-wire.step-1.stl  2WireSlipRing-2-wire-slipring-stl_-_2WireSlipRing-2-wire-slipring.step-1_stator.step-1_positive-stator-wire.step-1.stl  2WireSlipRing-2-wire-slipring-stl_-_2WireSlipRing-2-wire-slipring.step-1_stator.step-1_stator_body.step-1.stl  3rd_Joint_Pulley_V1_HT_20250927-stl.stl  3rd_Joint_V1_HT_20250920-stl.stl  90_degree_elbow_V4_NB-stl.stl  Base_Funnel_1_-stl.stl  Base_Updated-stl.stl  CapForDifferentialV2_Mar14-stl.stl  DifferentialHousing-stl.stl  GT2_60T_b5_6mm_-stl.stl  GT2_x_6mm_Pully_5mm_Bore-pulley-stl.stl  GT2_x_6mm_Pully_5mm_Bore-stl.stl  Pipe-stl.stl  README.md  Stepper-Pulley-stl.stl  Stepper-stl.stl  StepperHolderV2-stl.stl  another-Stepper-stl.stl  arduino-uno-rough-stl.stl  baseToShoulder-newDim-Mar24-stl_-_2WireSlipRing-2-wire-slipring-1_2WireSli_.step-1_rotor.step-1_rotator-base.step-1.stl  baseToShoulder-newDim-Mar24-stl_-_2WireSlipRing-2-wire-slipring-1_2WireSli_.step-1_stator.step-1_stator_body.step-1.stl  baseToShoulder-newDim-Mar24-stl_-_2WireSlipRing-2-wire-slipring-1_2WireSli_rotor.step-1_negative-rotor-wire.step-1.stl  baseToShoulder-newDim-Mar24-stl_-_2WireSlipRing-2-wire-slipring-1_2WireSli_rotor.step-1_positive-rotor-wire.step-1.stl  baseToShoulder-newDim-Mar24-stl_-_2WireSlipRing-2-wire-slipring-1_2WireSli_tator.step-1_negative-stator-wire.step-1.stl  baseToShoulder-newDim-Mar24-stl_-_2WireSlipRing-2-wire-slipring-1_2WireSli_tator.step-1_positive-stator-wire.step-1.stl  baseToShoulder-newDim-Mar24-stl_-_Stepper-1-1.stl  baseToShoulder-newDim-Mar24-stl_-_Stepper-1.stl  baseToShoulder-newDim-Mar24-stl_-_carrier_1-changedDimensionsMar21-1-1.stl  baseToShoulder-newDim-Mar24-stl_-_carrier_1-changedDimensionsMar21-1.stl  baseToShoulder-newDim-Mar24-stl_-_outer_ring_newDimensionsMar21-5-1.stl  baseToShoulder-newDim-Mar24-stl_-_outer_ring_newDimensionsMar21-5.stl  baseToShoulder-newDim-Mar24-stl_-_planetShafts-1-1.stl  baseToShoulder-newDim-Mar24-stl_-_planetShafts-1.stl  baseToShoulder-newDim-Mar24-stl_-_planetShafts-2-1.stl  baseToShoulder-newDim-Mar24-stl_-_planetShafts-2.stl  baseToShoulder-newDim-Mar24-stl_-_planetShafts-3-1.stl  (+46 more)
waybionic_description/urdf/: README.md  full_arm_mar24.urdf  test_all_meshes.preGrid.urdf.bak  test_all_meshes.urdf  waybionic.urdf  waybionic_49parts.urdf.bak  waybionic_assembled.urdf  waybionic_placeholder.urdf.bak
waybionic_rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
waybionic_rviz_plugins/config/: doctor_camera_view.rviz  engineer_ar4_demo.rviz  engineer_monitoring_view.rviz
waybionic_rviz_plugins/docs/: DIAGNOSTICS_BACKEND_INTEGRATION.md  DIAGNOSTICS_CONTRACT.md  GROUND_STATION_RVIZ_UI.md  PR_NOTES.md
waybionic_rviz_plugins/include/waybionic_rviz_plugins/: diagnostics_contract.hpp  diagnostics_panel.hpp  diagnostics_source.hpp  mock_diagnostics_source.hpp  ros_diagnostics_source.hpp  surgeon_camera_panel.hpp
waybionic_rviz_plugins/launch/: doctor_view.launch.py  engineer_ar4_demo.launch.py  engineer_view.launch.py  temporary_diagnostics_publisher.launch.py
waybionic_rviz_plugins/scripts/: temporary_diagnostics_publisher.py
waybionic_rviz_plugins/src/: diagnostics_panel.cpp  mock_diagnostics_source.cpp  ros_diagnostics_source.cpp  surgeon_camera_panel.cpp
waybionic_rviz_plugins/test/: test_package_metadata.py
waybionic_sensors/: README.md  package.xml  setup.cfg  setup.py
waybionic_sensors/config/: imu_demo.rviz
waybionic_sensors/docs/: PR_NOTES.md
waybionic_sensors/launch/: imu_demo.launch.py  imu_publisher.launch.py
waybionic_sensors/test/: test_package_metadata.py
waybionic_sensors/waybionic_sensors/: imu_publisher_node.py
(+112 files in other folders)
