<?xml version="1.0"?>
<package format="3">
  <name>waybionic_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz2 diagnostics panel and engineer monitoring layouts for WayBionic.</description>
  <maintainer email="khuzaymahbinharis@gmail.com">Khuzaymah Bin Haris</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
